# falkolib

./: CMakeLists.txt  package.xml
include/falkolib/Common/: HoughSpectrum.h
include/falkolib/Feature/: BSC.h  BSCExtractor.h  CGHExtractor.h
include/falkolib/Matching/: CCDAMatcher.h
src/Common/: HoughSpectrum.cpp
src/Feature/: BSC.cpp  CGH.cpp  FALKOExtractor.cpp  OCExtractor.cpp
test/: testFalkoAHT.cpp  testFalkoCC.cpp  testKeypointFalko.cpp  testKeypointOC.cpp
